using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants
{
    public static class AnimationsTag
    {
        public static string BACKWARD_JUMP = "BackwardJump";
        public static string FINISH_WALL = "FinishWall";
        public static string RUN = "Run";
        public static string VICTORY = "Victory";
        public static string DEAD = "Dead";
    }

    public static class Tag
    {
        public static string DIAMOND = "Diamond";
        public static string LEVEL_BAR = "LevelBar";
        public static string MAINCAMERA = "MainCamera";
        public static string OBSTACLE = "Obstacle";
        public static string PLAYER = "Player";
    }
    public static class Prefs
    {
        public static string HEALT_REF_VALUE = "HealtRefValue";
        public static string COEFFICIENT_MONEY = "CoefficientMoney";
        public static string LEVEL = "Level";
        public static string MONEY = "Money";

    }
}
